# rl-project

cas726_project/: package.xml  setup.cfg  setup.py
cas726_project/bitmap_maps/: maze-ttb-sim.pgm
cas726_project/cas726_project/: ai_explorer.py  evaluator.py  frontier_explorer.py  frontier_explorer_sim.py  human_explorer_sim.py  nav_env.py  nav_env_train.py  nav_env_train_2.py
robot_sim/: CMakeLists.txt  package.xml
robot_sim/action/: NavigateToPose.action
robot_sim/launch/: robot_sim.launch.py
robot_sim/rviz/: robot.rviz
robot_sim/src/: robot_sim_server.cpp
robot_sim/srv/: ComputePath.srv  LoadMap.srv  ResetMap.srv  SetRobotPose.srv
